[#87] Integrate onboarding with API (#91)
* Update types from new openapi schemas (#87)

* Add index function to retrieve all offices (#87)

* Add office seed data (#87)

* Add office index and connect office picker to API (#87)

* Add emoji to office (#87)

* Refactor office picker to have an office item component (#87)

* Add api integration to schedule picker (#87)

* Clean OfficePicker and SchedulePicker (#87)

* Fix zeitwerk office serializer name issue (#87)

* Change workflow to only load schema (#87)

* Change emoji on office seed data (#87)

---------
