# api/app/serializers/office_serializer.rb
@@ -1,0 +1,9 @@
+class OfficeSerializer
+  include JSONAPI::Serializer
+  attributes :id,
+             :name,
+             :city,
+             :state,
+             :timezone,
+             :emoji
+end
